# ecommerce

./: LICENSE  README.md  ghcup-install.ps1
backend/: shopping-cart-backend.cabal
backend/app/: Main.hs
backend/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
backend/src/: Domain.hs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Cart.jsx  ProductItem.jsx  ProductList.jsx  Total.jsx
